# MaRGE_3D_solver

./: Analy_J_cls_3D.py  Analy_obj_3D.py  CITATION.cff  Conv_3D.py  Dtche_J_cls_3D.py  Dtche_J_parameters_3D.py  Dtche_obj_3D.py  README.md  Vortex_Fld_3D.py  pyproject.toml
.github/workflows/: ci_pipeline.yml
docs/: changelog.md
docs/notebooks/: 01_firstSteps.ipynb
marge3d/: analytic.py  fields.py  numeric.py  params.py  utils.py
scripts/: run_Daitche_solution.py  run_analytical_solution.py  run_convergence.py
tests/: test_conv.py
